--- a/StRoot/StEbyeDSTMaker/Makefile
+++ b/StRoot/StEbyeDSTMaker/Makefile
@@ -1,6 +1,6 @@
 #**********************************************************************
 #*
-#* $Id: Makefile,v 1.1 2000/08/01 13:57:55 jgreid Exp $
+#* $Id: Makefile,v 1.1.1.1 2000/08/01 13:57:55 jgreid Exp $
 #*
 #* Author: Jeff Reid, UW, July 2000
 #*
@@ -15,8 +15,8 @@
 #**********************************************************************
 #*
 #* $Log: Makefile,v $
-#* Revision 1.1  2000/08/01 13:57:55  jgreid
-#* Initial revision
+#* Revision 1.1.1.1  2000/08/01 13:57:55  jgreid
+#* EbyE DST creation and access tools
 #*
 #*
 #**********************************************************************
